--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <html>
 <head>
 <title>R-NPSMUN 2022</title>
+  <style>
+    body {
+  width: 90%;
+  margin: 0 auto;
+}
+header {
+  margin-top: 20px;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #b5b5b5;
+}
+.logo {
+  width: 250px;
+  height: 150px;
+  text-align: center;
+}
+  </style>
 </head>
-
-<img src="logo.png"></img>
+  
+<body>
+  <header>
+    <div class="row">
+      <div class="logo-row">
+        <img src="logo.png" alt="logo" class="logo">
+      </div>
+    </div>
+  </header>
 </html>
