--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@ header {
   border-bottom: 2px solid #b5b5b5;
 }
 .logo {
-  width: 250px;
-  height: 150px;
+  border-radius: 50%;
   text-align: center;
 }
   </style>
