--- a/index.html
+++ b/index.html
@@ -1,29 +1,10 @@
 <html>
-<head>
-<title>R-NPSMUN 2022</title>
-  <style>
-    body {
-  width: 90%;
-  margin: 0 auto;
-}
-header {
-  margin-top: 20px;
-  padding-bottom: 10px;
-  border-bottom: 2px solid #b5b5b5;
-}
-.logo {
-  border-radius: 50%;
-  text-align: center;
-}
-  </style>
-</head>
+  <head>
+    <title>R-NPSMUN 2022</title>
+  </head>
   
-<body>
-  <header>
-    <div class="row">
-      <div class="logo-row">
-        <img src="logo.png" alt="logo" class="logo">
-      </div>
-    </div>
-  </header>
+  <body>
+    <img src="logo.png" style="  vertical-align: middle; width: 250px; height: 250px;border-radius: 50%;"></img>
+  </body>
+  
 </html>
