--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>R-NPSMUN 2022</title>
+    <link rel="icon" type="image/x-icon" href="logo.png">
   </head>
   
   <body>
