--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   
   <body>
-    <img src="logo.png" style="  vertical-align: middle; width: 250px; height: 250px;border-radius: 50%;"></img>
+    <center><img src="logo.png" style="vertical-align: middle; width: 500px; height: 500px;border-radius: 50%; margin: 70px;"></center>
   </body>
   
 </html>
