--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-						<header>
+						<!-- <header>
 							<h2>The future has landed</h2>
 							<p>And there are no hoverboards or flying cars.<br />
 							Just apps. Lots of mother flipping apps.</p>
-						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						</header> -->
+						<span class="image"><img src="logo.png" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
