--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 							<li>
 								<a href="#">Layouts</a>
 								<ul>
+									<li><a href="left-sidebar.html">HOME</a></li>
+									<li><a href="left-sidebar.html">COMMITTEES</a></li>
+									<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
