aravind on da beat
ara ara blr

--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#">Layouts</a>
+								<a href="#">Committees</a>
 								<ul>
-									<li><a href="left-sidebar.html">HOME</a></li>
-									<li><a href="left-sidebar.html">COMMITTEES</a></li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
+									<li><a href="unem.html">UNEM</a></li>
+									<li><a href="unhrc.html">UNHRC</a></li>
+									<li><a href="aippm.html">All India Political Parties Meet</a></li>
+									<li><a href="fcc.html">Futuristic Crisis Committee</a></li>
+									<li><a href="ipc.html">IPC</a></li>
+									<!--<li>
 										<a href="#">Submenu</a>
 										<ul>
 											<li><a href="#">Option 1</a></li>
@@ -39,11 +38,14 @@
 											<li><a href="#">Option 3</a></li>
 											<li><a href="#">Option 4</a></li>
 										</ul>
-									</li>
+									</li> -->
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="eb.html">Secretariat</a></li>
+							<li><a href="#">Delegate Handbook</a></li>
+							<li><a href="#">Background Guides</a></li>
+							<li><a href="contactus.html">Contact Us</a></li>
+							<li><a href="#" class="button primary">REGISTRATION</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -193,7 +195,7 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.instagram.com/rnpsmun2022/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 						<li><a href="#" class="icon solid alt fa-phone"><span class="label">Email</span></a></li>
 						<!--<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
