--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 							<li><a href="eb.html">Secretariat</a></li>
 							<li><a href="#">Delegate Handbook</a></li>
 							<li><a href="#">Background Guides</a></li>
+							<li><a href="#">Matrix</a></li>
 							<li><a href="contactus.html">Contact Us</a></li>
 							<li><a href="#" class="button primary">REGISTRATION</a></li>
 						</ul>
@@ -58,11 +59,19 @@
 							<p>And there are no hoverboards or flying cars.<br />
 							Just apps. Lots of mother flipping apps.</p>
 						</header> -->
-						<span class="image"><img src="logo.png" alt="" /></span>
+						<center>
+							<span class="image"><img src="logo.png" alt=""/></span><br><br>
+							<div class="col-4 col-12-large">
+								<strong><p style="font-size: 36px;">FUTURUM EST MANIBUS</p></strong>
+							</div>
+								<strong>4<sup>th</sup>,  5<sup>th</sup> &  6<sup>th</sup>								
+									<br>August 2022</strong>
+							</p>
+						</center>
+						<p> <b> Words are, in my not-so-humble opinion, our most inexhaustible source of magic. Capable of both inflicting injury, and remedying it. </b></p>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
-
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
 					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
