--- a/fcc.html
+++ b/fcc.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>RNPSMUN 2022-AIPPM</title>
+		<title>RNPSMUN 2022-FCC</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
