--- a/aippm.html
+++ b/aippm.html
@@ -53,7 +53,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<div style="text-align: center;">
-						<span class="image"><img src="./images/comlog/aippm.jpg" alt="" style="border-radius: 50%; width: 100%; height: 100%;"/></span>
+						<span class="image"><img src="./images/comlog/aippm.jpg" alt="" style="border-radius: 50%; width: 20em; height: 20em;"/></span>
 					</div>
 						<header class="major">
 						</header>
