--- a/unem.html
+++ b/unem.html
@@ -80,8 +80,8 @@
             <footer id="footer">
                 <ul class="icons">
                     <li><a href="https://www.instagram.com/rnpsmun2022/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-                    <li><a href="#" class="icon solid alt fa-phone"><span class="label">Email</span></a></li>
+                    <li><a href="mailto:rnpsmun2022@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+                    <li><a href="tel:08023350361" class="icon solid alt fa-phone"><span class="label">Phone</span></a></li>
                     <!--<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
                     <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
                     <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
