--- a/fcc.html
+++ b/fcc.html
@@ -53,24 +53,30 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<div style="text-align: center;">
-						<span class="image"><img src="./images/comlog/fcc.jpg" alt="" style="border-radius: 50%; width: 100%; height: 100%;"/></span>
+						<span class="image"><img src="./images/comlog/fcc.jpg" alt="" style="border-radius: 50%; width: 20em; height: 20em;"/></span>
 					</div>
 						<header class="major">
 						</header>
 						<!-- Content -->
 							<section id="content">
-								<h3>Dolore Amet Consequat</h3>
-								<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam cubilia adipiscing interdum aliquet aliquet placerat cubilia accumsan cep ante nullam adipiscing tortor odio. Iaculis adipiscing accumsan nascetur in cras. Lacinia placerat.</p>
-								<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique faucibus magna adipiscing aliquet blandit nisi dolor accumsan nascetur lorem. Vis enim. Curae. Mi arcu vis aliquam ipsum non accumsan ac mi faucibus amet eu accumsan erat interdum semper accumsan. Eu sagittis tellus accumsan neque lorem penatibus in porttitor. Vivamus commodo curae. Condimentum lobortis praesent id ac lorem. Lorem vis ipsum dolor feugiat consequat dolore adipiscing.</p>
-								<h3>Sed Magna Ornare</h3>
-								<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus. In accumsan lorem nunc ultrices a ac eu accumsan ac id nullam. Nec lobortis. Faucibus. Mi commodo laoreet arcu at non mi lacinia aliquet non lobortis phasellus accumsan nascetur varius. Integer orci porttitor eu faucibus aliquet faucibus ac accumsan adipiscing accumsan odio. Ut adipiscing.</p>
-								<ul>
-									<li>Faucibus orci lobortis ac adipiscing integer.</li>
-									<li>Col accumsan arcu mi aliquet placerat.</li>
-									<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-									<li>Blandit massa non blandit tempor interdum.</li>
-									<li>Lacinia mattis arcu nascetur lobortis.</li>
-								</ul>
+								<div style="text-align: center;">
+									<h2>FCC</h2>
+					<p style="font-size: 0.75em">
+						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
+					</p>
+					<p style="font-size: 0.75em;">
+						<b>-Bernard Baruch.</b>
+					</p>
+					<p style="font-size: 0.75em">
+						A committee consisting of the most substantial powers in the past decade come together in 2035 to address the anonymous message that threatens to release a potent bioweapon upon the world. With an urgent need to put aside their post-war differences after a decade of global political unrest, will the countries find the strength to unite when faced with the consequences of the dark side of science, privatization of government and the growing influence of private individuals on politics?
+					</p>
+					<h3 class="major">AGENDA</h3>
+
+					<p style="font-weight: bold; text-align: center">
+						To revisit the role of bio-weaponry in the given socio-political climate to tackle an open threat to humanity
+					</p>
+
+								</div>
 							</section>
 
 					</div>
@@ -109,4 +115,3 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
-</html>
