--- a/eb.html
+++ b/eb.html
@@ -56,7 +56,7 @@
                 <header style="text-align: center">
                     <!-- DISEC LOGO -->
                     <div style="right : 0px; position: relative;">
-                        <img src="./images/avatar.png" style="height: 16em; width:16em ;right:2em; border-radius: 50%;">
+                        <img src="logo.png" style="height: 16em; width:16em ;right:2em; border-radius: 50%;">
                     </div>
                     <!-- R-NPSMUN LOGO-->
                     <div class="inner" style="text-align: center">
