More index nonesense

--- a/index.html
+++ b/index.html
@@ -74,29 +74,21 @@
 				</section>
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/navybluegradient.jpg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2><img src="images/npslogo.png" alt="" /><br>WHAT IS R-NPSMUN</h2>
+										<p>NPS Rajajinagar proudly presents to you the sixth edition of R-NPSMUN!</p>
 									</header>
 								</div>
-								<div class="col-4 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+								<div class="col-4 col-12-medium"">
+									<p>An amalgamation of the consistent committees fused with a few unconventional ones, we have ensured that each delegate, new or experienced, has something to look forward to. Delegates will have to think on their feet to keep up with the pace of the debate, combating the obstacles posed, while sticking to the portfolios represented.</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>Alliances will be made, strategies devised, while keeping the nations’ best interests at heart. Factual knowledge along with rational arbitrations will sail you through! So delegates, come be a part of this exhilarating experience!</p>
 								</div>
 							</div>
 						</div>
@@ -114,7 +106,7 @@
 						</header>
 						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="#" class="button" data-toggle="modal" data-target="#secgen" class="special" style="color:#ffffff">LETTER FROM THE SECRETARY GENERAL</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
