--- a/eb.html
+++ b/eb.html
@@ -98,7 +98,7 @@
                                     <article >
                                     <a >
                                         <div style="border-radius: 100%; text-align: center; size: 50%">
-                                            <img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%;">
+                                            <img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-width = 50%">
                                             <p>
                                                 <h1 style="font: 1em sans-serif; color:white">HEAD OF THE ORGANISING COMMITTEE</h1>
                                                 <p>Akshath Raghav R</p> 
