--- a/eb.html
+++ b/eb.html
@@ -97,8 +97,8 @@
                     
                                     <article >
                                     <a >
-                                        <div style="border-radius: 100%; text-align: center; size: 50%">
-                                            <img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%;">
+                                        <div style="border-radius: 100%; text-align: center; size: 50%; ">
+                                            <img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%;  border-radius: 50%;">
                                             <p>
                                                 <h1 style="font: 1em sans-serif; color:white">HEAD OF THE ORGANISING COMMITTEE</h1>
                                                 <p>Akshath Raghav R</p> 
