--- a/eb.html
+++ b/eb.html
@@ -68,7 +68,7 @@
                                 <article >
                                     <a >
                                         <div style="border-radius: 100%; text-align: center; size: 50%">
-                                            <img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%;">
+                                            <img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
                                             <p>
                                                 <h1 style="font: 1em sans-serif;  color:white">SECRETARY GENERAL</h1>
                                                 <p>AKASH GC</p> 
@@ -84,7 +84,7 @@
                                 <article>
                                         <a >
                                             <div style="border-radius: 100%; text-align: center; size: 50%">
-                                                <img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%;">
+                                                <img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
                                                 <p>
                                                     <h1 style="font: 1em sans-serif;  color:white">DEPUTY SECRETARY GENERAL</h1>
                                                     <p>ARCHITH CASHEEKAR</p> 
@@ -114,7 +114,7 @@
                                 <article>
                                         <a >
                                             <div style="border-radius: 100%; text-align: center; size: 50%">
-                                                <img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%;">
+                                                <img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
                                                 <p>
                                                     <h1 style="font: 1em sans-serif;  color:white">CRISIS DIRECTOR</h1>
                                                     <p>Vaibhav S</p> 
@@ -131,7 +131,7 @@
                                     <article>
                                             <a >
                                                 <div style="border-radius: 100%; text-align: center; size: 50%">
-                                                    <img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%;">
+                                                    <img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
                                                     <!-- <img src="./images/adviser.png" style="height : 11em; width : 13em; left: 50%;"> -->
                                                     <p>
                                                         <h1 style="font: 1em sans-serif;  color:white">MUN ADVISOR</h1>
