--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		
 		.modal-content {
 		  position: relative;
-		  background-image: linear-gradient(to right, rgba(150, 192, 209, 0.6), rgba(121, 180, 214, 0.6));
+		  background-image: linear-gradient(to right, rgba(150, 192, 209, 0.9), rgba(121, 180, 214, 0.9));
 		  margin: auto;
 		  padding: 0;
 		  border: 1px solid #888;
@@ -103,7 +103,7 @@
 		
 		.modal-header {
 		  padding: 2px 16px;
-		  background-image: linear-gradient(to right, rgb(35, 92, 192, 0.8), rgb(37, 43, 87, 0.8));
+		  background-image: linear-gradient(to right, rgb(35, 92, 192, 1), rgb(37, 43, 87, 1));
 		  color: white;
 		}
 		
@@ -111,7 +111,7 @@
 		
 		.modal-footer {
 		  padding: 2px 16px;
-		  background-image: linear-gradient(to right, rgb(35, 92, 192, 0.8), rgb(37, 43, 87, 0.8));
+		  background-image: linear-gradient(to right, rgb(35, 92, 192, 1), rgb(37, 43, 87, 1));
 		  color: white;
 		}
 		</style>
@@ -208,11 +208,14 @@
 									<h2>LETTER FROM THE SECRETARY GENERAL</h2>
 								  </div>
 								  <div class="modal-body">
-									<p>Some text in the Modal Body</p>
-									<p>Some other text...</p>
+									<p>Greetings Delegates!
+										On behalf of the RNPSMUN 2022 family, I am honored to extend my warmest welcome to each and every one of you to the 6th edition of RNPSMUN. Having had our last two editions online, an offline edition is a long-awaited change. This MUN seeks to bring out the best in each delegate, in terms of both diplomacy and leadership, and I can assure you that by the end of these three days, not only would you have learnt a lot more than you expected, but also grown into a more confident and assertive person.
+										The rigorous efforts which have gone in for the past numerous weeks reflect in what we all strive for – a glorious success of this conference. With five engaging committees, each with exciting agendas, a professional Executive Board, an enthusiastic Organizing Committee and a dedicated Secretariat, we promise you an educational and fun-filled conference, along with a great learning experience and lots of gratifying memories. </p>
+									<p>From being a nervous first timer a few years ago to being the Secretary General of RMUN 2022, the journey has been phenomenal, and I truly hope you find MUNing as delightful as I do. Please feel free to reach out to me in case of any queries.  Regardless of whether you win or not, it is the impact you make that matters most. As future global citizens, it is our responsibility to find solutions for the various pressing issues that plague the world today, and change, after all, starts with small conversations among people who care. This conference is a small step that will go a long way.
+										Looking forward to meeting you all!</p>
 								  </div>
 								  <div class="modal-footer">
-									<h3>Modal Footer</h3>
+									<h3>-Dhruti Deshpande</h3>
 								  </div>
 								</div>
 							  </div>
@@ -241,11 +244,13 @@
 									<h2>LETTER FROM THE DIRECTOR GENERAL</h2>
 								  </div>
 								  <div class="modal-body">
-									<p>Some text in the Modal Body</p>
-									<p>Some other text...</p>
+									<p>Greetings, Delegates!
+										It is my honour and privilege to welcome every one of you to the sixth installment of RNPS MUN. As is tradition, we plan to raise the standard yet again, and make this year’s MUN the best we’ve held so far. To write off this MUN as just another inter-school event would not be doing it justice. Our Secretariat and EB have worked tirelessly to make every moment of this MUN an incredible experience.
+										With five amazing committees, you really can’t make a wrong choice. Veteran debater or first timer, you’re guaranteed to find a committee for you. In accordance with our past standards, RNPS MUN will not let you down.</p>
+									<p>In the present state of the world, the importance of MUN is more apparent than ever. The need to speak out and make your opinion heard is ever-growing in this environment of uncertainty and turmoil. A MUN puts a loudspeaker behind your voice, and breathes a new life into your words. Winning is important, yes. But the true worth of a MUN lies in the memories and knowledge you walk away with. So, dive headfirst into three days of rigorous debate, deliberation, press conferences and crises. The future is in our hands, and it’s time to prove ourselves worthy of that mantle. And as always, may the best delegate win.</p>
 								  </div>
 								  <div class="modal-footer">
-									<h3>Modal Footer</h3>
+									<h3>-Vishal Rao</h3>
 								  </div>
 								</div>
 							  </div>
