--- a/unem.html
+++ b/unem.html
@@ -89,7 +89,7 @@ Can the world community stop the conflict before it leads to World War III? What
 	<article>
 							<a>
 								<div style="border-radius: 100%; text-align: center; size: 50%">
-									<img src="./content/ebphotos/AXIS/ani.png" style="height : 11em; width: 11em; left: 50%;">
+									<img src="./content/ebphotos/AXIS/ani.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%">
 									<!-- <img src="./images/guy.png" style="height : 11em; width : 13em; left: 50%;"> -->
 									<p>
 									<h1 style="font: 1em sans-serif;  color:white">CO-CHAIR</h1>
@@ -103,7 +103,7 @@ Can the world community stop the conflict before it leads to World War III? What
 						<article>
 							<a>
 								<div style="border-radius: 100%; text-align: center; size: 50%">
-									<img src="./content/ebphotos/AXIS/ani2.png" style="height : 11em; width: 11em; left: 50%;">
+									<img src="./content/ebphotos/AXIS/ani2.png" style="height : 11em; width: 11em; left: 50%;border-radius: 50%">
 									<!-- <img src="./images/guy.png" style="height : 11em; width : 13em; left: 50%;"> -->
 									<p>
 									<h1 style="font: 1em sans-serif;  color:white">CO-CHAIR</h1>
