--- a/unem.html
+++ b/unem.html
@@ -86,35 +86,31 @@ Can the world community stop the conflict before it leads to World War III? What
 				</div>
 
 			<section class="features">
-	<article>
-							<a>
-								<div style="border-radius: 100%; text-align: center; size: 50%">
-									<img src="./content/ebphotos/AXIS/ani.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%">
-									<!-- <img src="./images/guy.png" style="height : 11em; width : 13em; left: 50%;"> -->
-									<p>
-									<h1 style="font: 1em sans-serif;  color:white">CO-CHAIR</h1>
-									<p>Anirudh H A </p>
-									</p>
-								</div>
-							</a>
+	<article >
+						<a >
+							<div style="border-radius: 100%; text-align: center; size: 50%">
+								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+								<p>
+									<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
+									<p>VISHAL A RAO</p> 
+								</p>
+							</div>
+						</a>
 
-						</article>
+					</article>
 
-						<article>
-							<a>
-								<div style="border-radius: 100%; text-align: center; size: 50%">
-									<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%;border-radius: 50%">
-									<!-- <img src="./images/guy.png" style="height : 11em; width : 13em; left: 50%;"> -->
-									<p>
-									<h1 style="font: 1em sans-serif;  color:white">CO-CHAIR</h1>
-									<p>
-									Anirudh C B</p>
-									</p>
-								</div>
-							</a>
+						<article >
+						<a >
+							<div style="border-radius: 100%; text-align: center; size: 50%">
+								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+								<p>
+									<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
+									<p>VISHAL A RAO</p> 
+								</p>
+							</div>
+						</a>
 
-						</article>
-				
+					</article>
 
 
 
