--- a/aippm.html
+++ b/aippm.html
@@ -61,13 +61,13 @@
 							<section id="content">
 								<div style="text-align: center;">
 									<h2>AIPPM</h2>
-					<p style="font-size: 0.75em">
+					<p style="font-size: 1.25em">
 						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
 					</p>
-					<p style="font-size: 0.75em;">
+					<p style="font-size: 1.5em;">
 						<b>-Bernard Baruch.</b>
 					</p>
-					<p style="font-size: 0.75em">
+					<p style="font-size: 1em">
 						The first committee of the General Assembly, DISEC, presides over topics
 relating to international security and disarmament.
 This year's agenda is one of great interest and urgency.
@@ -77,7 +77,7 @@ originating in China.
 					</p>
 					<h3 class="major">AGENDA</h3>
 
-					<p style="font-weight: bold; text-align: center">
+					<p style="font-weight: bold; text-align: center; font-size: 1.5em">
 						Communal Intolerance 
 					</p>
 
