--- a/unem.html
+++ b/unem.html
@@ -61,13 +61,13 @@
 							<section id="content">
 								<div style="text-align: center;">
 									<h2>UNEM</h2>
-					<p style="font-size: 0.75em">
+					<p style="font-size: 1.25em">
 						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
 					</p>
-					<p style="font-size: 0.75em;">
+					<p style="font-size: 1.5em;">
 						<b>-Bernard Baruch.</b>
 					</p>
-					<p style="font-size: 0.75em">
+					<p style="font-size: 1em">
 						Subsequent to the Russian military attack on Ukraine on the 24th of February 2022, the conflict has grown manifold and impacted all citizens, directly or indirectly, across the globe. Global Food Security is threatened and crude oil prices are spiking worldwide, crippling the economies of rich and poor countries. With each of these countries keen on its motive, tensions have reached an all-time high on the Eastern front of Europe. 
 
 Can the world community stop the conflict before it leads to World War III? What can be done to prevent and punish war crimes? Find out at the United Nations Emergency Meeting on the Russia-Ukraine Conflict.
@@ -75,7 +75,7 @@ Can the world community stop the conflict before it leads to World War III? What
 					</p>
 					<h3 class="major">AGENDA</h3>
 
-					<p style="font-weight: bold; text-align: center">
+					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
 						Russia Ukraine crisis 
 					</p>
 
