--- a/unhrc.html
+++ b/unhrc.html
@@ -61,18 +61,18 @@
 							<section id="content">
 								<div style="text-align: center;">
 									<h2>UNHRC</h2>
-					<p style="font-size: 0.75em">
+					<p style="font-size: 1.25em">
 						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
 					</p>
-					<p style="font-size: 0.75em;">
+					<p style="font-size: 1.%;">
 						<b>-Bernard Baruch.</b>
 					</p>
-					<p style="font-size: 0.75em">
+					<p style="font-size: 1em">
 						" a privileged man's ignorance, is marginalized man's grave" Injustice, poverty , social and cultural boycott, lack of opportunities and non-dominant social identities, THESE are the several problems marginalized communities face. The UN HRC of NPS rnr will be focusing on how to resolve the problems addressed and aims to create an equitable, just and sustainable society. "Marginalized communities are those that are excluded from mainstream social, economical, educational and cultural life" the marginalized communities that are going to be included:- LGBTQI+ community , migrants and refugees, women and girls , ethnic minorities.
 					</p>
 					<h3 class="major">AGENDA</h3>
 
-					<p style="font-weight: bold; text-align: center">
+					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
 						Safeguarding the rights and interests of marginalised communities
 					</p>
 
