--- a/fcc.html
+++ b/fcc.html
@@ -61,18 +61,18 @@
 							<section id="content">
 								<div style="text-align: center;">
 									<h2>FCC</h2>
-					<p style="font-size: 0.75em">
+					<p style="font-size: 1.25em">
 						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
 					</p>
-					<p style="font-size: 0.75em;">
+					<p style="font-size: 1.5em;">
 						<b>-Bernard Baruch.</b>
 					</p>
-					<p style="font-size: 0.75em">
+					<p style="font-size: 1em">
 						A committee consisting of the most substantial powers in the past decade come together in 2035 to address the anonymous message that threatens to release a potent bioweapon upon the world. With an urgent need to put aside their post-war differences after a decade of global political unrest, will the countries find the strength to unite when faced with the consequences of the dark side of science, privatization of government and the growing influence of private individuals on politics?
 					</p>
 					<h3 class="major">AGENDA</h3>
 
-					<p style="font-weight: bold; text-align: center">
+					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
 						To revisit the role of bio-weaponry in the given socio-political climate to tackle an open threat to humanity
 					</p>
 
