--- a/ipc.html
+++ b/ipc.html
@@ -61,18 +61,18 @@
 							<section id="content">
 								<div style="text-align: center;">
 									<h2>IPC</h2>
-					<p style="font-size: 0.75em">
+					<p style="font-size: 1.25em">
 						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
 					</p>
-					<p style="font-size: 0.75em;">
+					<p style="font-size: 1.5em;">
 						<b>-Bernard Baruch.</b>
 					</p>
-					<p style="font-size: 0.75em">
+					<p style="font-size: 1em">
 						The international press committee is designed to represent journalists and the media. The IPC's agenda for it's journalists this year, is to tackle political polarisation in relation to modern journalism. It is a issue prevalent in the modern day and we aim to try and find a ethical solution to this problem by covering the topic of censorship and bias.
 					</p>
 					<h3 class="major">AGENDA</h3>
 
-					<p style="font-weight: bold; text-align: center">
+					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
 						Political Polarization and Modern Journalism
 					</p>
 
