--- a/unem.html
+++ b/unem.html
@@ -118,7 +118,7 @@ Can the world community stop the conflict before it leads to World War III? What
 								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-									<p>Manya H</p> 
+									<p>Maanya H</p> 
 								</p>
 							</div>
 						</a>
