--- a/aippm.html
+++ b/aippm.html
@@ -94,7 +94,7 @@ originating in China.
 								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-									<p>VISHAL A RAO</p> 
+									<p style="color: white;">PRAJWAL R</p> 
 								</p>
 							</div>
 						</a>
@@ -106,7 +106,7 @@ originating in China.
 									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-										<p>VISHAL MASKI</p> 
+										<p style="color: white;">ANANTHASHREYAS NAIR</p> 
 									</p>
 								</div>
 							</a>
@@ -119,19 +119,7 @@ originating in China.
 									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-										<p>VISHAL MASKI</p> 
-									</p>
-								</div>
-							</a>
-
-						</article>
-						<article>
-							<a >
-								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
-									<p>
-										<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-										<p>VISHAL MASKI</p> 
+										<p style="color: white;">YASHASWINI SIRWAR</p> 
 									</p>
 								</div>
 							</a>
