--- a/unem.html
+++ b/unem.html
@@ -92,7 +92,7 @@ Can the world community stop the conflict before it leads to World War III? What
 								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-									<p "color:white">Vishal Maski</p> 
+									<p style = "color:white">Vishal Maski</p> 
 								</p>
 							</div>
 						</a>
@@ -105,7 +105,7 @@ Can the world community stop the conflict before it leads to World War III? What
 								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-									<p " color:white>Rishabh Shetty</p> 
+									<p style = " color:white>Rishabh Shetty</p> 
 								</p>
 							</div>
 						</a>
