--- a/aippm.html
+++ b/aippm.html
@@ -94,7 +94,7 @@ originating in China.
 								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-									<p>Prajwal R</p> 
+									<p style = "color:white" >Prajwal R</p> 
 								</p>
 							</div>
 						</a>
@@ -106,7 +106,7 @@ originating in China.
 									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-										<p>Yashaswini Sirwar</p> 
+										<p style = "color:white">Yashaswini Sirwar</p> 
 									</p>
 								</div>
 							</a>
@@ -119,7 +119,7 @@ originating in China.
 									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-										<p>Ananthashreyas Nair</p> 
+										<p style = "color:white">Ananthashreyas Nair</p> 
 									</p>
 								</div>
 							</a>
