--- a/unhrc.html
+++ b/unhrc.html
@@ -81,7 +81,57 @@
 
 					</div>
 				</div>
+				<section class="features" style="text-transform: capitalize" >
+	
+					<article >
+						<a >
+							<div style="border-radius: 100%; text-align: center; size: 50%">
+								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+								<p>
+									<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
+									<p style="color: white;">Jatin Jain</p> 
+								</p>
+							</div>
+						</a>
 
+					</article>
+					<article>
+							<a >
+								<div style="border-radius: 100%; text-align: center ; size: 50%">
+									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
+									<p>
+										<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
+										<p style="color: white;">Diya Madhu</p> 
+									</p>
+								</div>
+							</a>
+
+						</article>
+
+						<article>
+							<a >
+								<div style="border-radius: 100%; text-align: center ; size: 50%">
+									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
+									<p>
+										<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
+										<p style="color: white;">Anvesha Girish</p> 
+									</p>
+								</div>
+							</a>
+
+						</article>
+						<article>
+							<a >
+								<div style="border-radius: 100%; text-align: center ; size: 50%">
+									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
+									<p>
+										<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
+										<p style="color: white;">Muktha</p> 
+									</p>
+								</div>
+							</a>
+
+						</article>
 			<!-- Footer -->
             <footer id="footer">
                 <ul class="icons">
