--- a/unem.html
+++ b/unem.html
@@ -117,7 +117,7 @@ Can the world community stop the conflict before it leads to World War III? What
 							<div style="border-radius: 100%; text-align: center; size: 50%">
 								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
+									<h1 style="font: 1em sans-serif;  color:white">MODERATOR</h1>
 									<p style = "color:white">Maanya H</p> 
 								</p>
 							</div>
