--- a/fcc.html
+++ b/fcc.html
@@ -89,7 +89,7 @@
 							<div style="border-radius: 100%; text-align: center; size: 50%">
 								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
+									<h1 style="font: 1em sans-serif;  color:white">CHAIR</h1>
 									<p style = "color:white" >Neha Hemadri</p> 
 								</p>
 							</div>
@@ -101,7 +101,7 @@
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
 									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
 									<p>
-										<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
+										<h1 style="font: 1em sans-serif;  color:white">CO- VICE CHAIR</h1>
 										<p style = "color:white">Smrithi Shenoy</p> 
 									</p>
 								</div>
@@ -114,7 +114,7 @@
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
 									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
 									<p>
-										<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
+										<h1 style="font: 1em sans-serif;  color:white">CO- VICE CHAIR</h1>
 										<p style = "color:white">Nikhil Atreya</p> 
 									</p>
 								</div>
