--- a/ipc.html
+++ b/ipc.html
@@ -100,7 +100,7 @@
 								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em sans-serif;  color:white">EDITOR IN CHIEF </h1>
-									<p style = " color:white> Keerthi Girish</p> 
+									<p style = "color:white">Keerthi Girish</p>  
 								</p>
 							</div>
 						</a>
