--- a/ipc.html
+++ b/ipc.html
@@ -112,7 +112,7 @@
 								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em sans-serif;  color:white">SECRETARY OF PRESS</h1>
-									<p style = "color:white">Yati PATIL</p> 
+									<p style = "color:white">Yati Patil</p> 
 								</p>
 							</div>
 						</a>
