I guess index.html is done

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 						</div>
 					</div>
 					<a href="#five" class="goto-next scrolly">Next</a>
-				</section>
+				</section><hr><hr>
 
 			<!-- Four -->
 				<section id="five" class="wrapper style1 special fade-up">
@@ -466,61 +466,46 @@
 							<h2>The Committees</h2>
 							<p>Five Committees, Riveting and Thrilling</p>
 						</header>
-						<div class="box alt">
-							<div class="row gtr-uniform">
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-							</div>
-						</div>
-						<footer class="major">
-							<ul class="actions special">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
-							</ul>
-						</footer>
-					</div>
-				</section>
-
-			<!-- Five -->
-				<section id="five" class="wrapper style2 special fade">
-					<div class="container">
-						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
-						</header>
-						<form method="post" action="#" class="cta">
-							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
-							</div>
-						</form>
+						<section class="features">
+						<table>
+							<tbody>
+							<tr>
+							<a href='unem.html'>
+								<div style="border-radius: 100%; text-align: center">
+									<img src="./images/comlog/unem.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
+									<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
+										href='unem.html'>UNEM</h1>
+								</div>
+							</a><br>
+							<a href='unhrc.html'>
+								<div style="border-radius: 100%; text-align: center">
+									<img src="./images/comlog/unhrc.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
+									<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
+										href='unhrc.html'>UNHRC</h1>
+								</div>
+							</a><br>
+							<a href='aippm.html'>
+									<div style="border-radius: 100%; text-align: center">
+										<img src="./images/comlog/aippm.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
+										<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
+											href='aippm.html'>AIPPM</h1>
+									</div>
+							</a><br>
+							<a href='fcc.html'>
+								<div style="border-radius: 100%; text-align: center">
+									<img src="./images/comlog/fcc.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
+									<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
+										href='fcc.html'>FCC</h1>
+								</div>
+							</a><br>
+							<a href='ipc.html'>
+									<div style="border-radius: 100%; text-align: center">
+										<img src="./images/comlog/ipc.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
+										<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
+											href='ipc.html'>IPC</h1>
+									</div>
+							</a><br>
+						</tr></tbody></table>
 					</div>
 				</section>
 
