--- a/aippm.html
+++ b/aippm.html
@@ -75,6 +75,9 @@ The goal of the committee is to dive deeper into the militarization of viruses a
 well as address the situation around the 2019-21 pandemic caused by the Covid 19 virus
 originating in China.
 					</p>
+									
+					<header class="major">
+						</header>
 					<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em">
