--- a/unem.html
+++ b/unem.html
@@ -73,7 +73,9 @@
 Can the world community stop the conflict before it leads to World War III? What can be done to prevent and punish war crimes? Find out at the United Nations Emergency Meeting on the Russia-Ukraine Conflict.
 
 					</p>
-					<h3 class="major">AGENDA</h3>
+					<header class="major">
+						</header>
+									<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
 						Russia Ukraine crisis 
