--- a/aippm.html
+++ b/aippm.html
@@ -76,7 +76,7 @@ well as address the situation around the 2019-21 pandemic caused by the Covid 19
 originating in China.
 					</p>
 									
-					<header class="major" width = 20em>
+					<header class="major" width = 10cm>
 						</header>
 					<h3 class="major">AGENDA</h3>
 
