--- a/unhrc.html
+++ b/unhrc.html
@@ -70,6 +70,8 @@
 					<p style="font-size: 1em">
 						" a privileged man's ignorance, is marginalized man's grave" Injustice, poverty , social and cultural boycott, lack of opportunities and non-dominant social identities, THESE are the several problems marginalized communities face. The UN HRC of NPS rnr will be focusing on how to resolve the problems addressed and aims to create an equitable, just and sustainable society. "Marginalized communities are those that are excluded from mainstream social, economical, educational and cultural life" the marginalized communities that are going to be included:- LGBTQI+ community , migrants and refugees, women and girls , ethnic minorities.
 					</p>
+					<header class="major" width = 10cm>
+						</header>
 					<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
