--- a/ipc.html
+++ b/ipc.html
@@ -70,7 +70,9 @@
 					<p style="font-size: 1em">
 						The international press committee is designed to represent journalists and the media. The IPC's agenda for it's journalists this year, is to tackle political polarisation in relation to modern journalism. It is a issue prevalent in the modern day and we aim to try and find a ethical solution to this problem by covering the topic of censorship and bias.
 					</p>
-					<h3 class="major">AGENDA</h3>
+					<header class="major">
+						</header>
+									<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
 						Political Polarization and Modern Journalism
