--- a/eb.html
+++ b/eb.html
@@ -53,7 +53,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<center><a href="#" class="image fit"><img src="logo.png" style="border-radius: 50%; width: 20em; height: 20em;" alt=""/></a></center>
+							<center><a href="#" class="image fit"><img src="logo.png" style="border-radius: 50%; width: 20em; height: 20em; border: 2px solid gold !important;" alt=""/></a></center>
 							<h2>SECRETARIAT</h2>
 						</header>
 
