--- a/unem.html
+++ b/unem.html
@@ -53,7 +53,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<div style="text-align: center;">
-						<span class="image"><img src="./images/comlog/unem.jpg" alt="" style="border-radius: 50%; width: 20em; height: 20em;"/></span>
+						<span class="image"><img src="./images/comlog/unem.jpg" alt="" style="border-radius: 50%; width: 20em; height: 20em; border: 2px solid gold !important;"/></span>
 					</div>
 						<header class="major">
 						</header>
