--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 		  animation-name: animatetop;
 		  animation-duration: 0.4s;
 		  color: rgba(25, 25, 112);
+		  
 		}
 		
 		@-webkit-keyframes animatetop {
@@ -204,8 +205,8 @@
 							<li>
 								<a href="#">Committees</a>
 								<ul>
-									<li><a href="unem.html">United Nations Emergency Meeting </a></li>
-									<li><a href="unhrc.html">United Nations Human Rights Council</a></li>
+									<li><a href="unem.html">UNEM </a></li>
+									<li><a href="unhrc.html">UNHRC</a></li>
 									<li><a href="aippm.html">All India Political Parties Meet</a></li>
 									<li><a href="fcc.html">Futuristic Crisis Committee</a></li>
 									<li><a href="ipc.html">International Press Corps</a></li>
@@ -474,35 +475,35 @@
 								<div style="border-radius: 100%; text-align: center">
 									<img src="./images/comlog/unem.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
 									<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
-										href='unem.html'>UNEM</h1>
+										href='unem.html'>United Nations Emergency Meeting</h1>
 								</div>
 							</a><br>
 							<a href='unhrc.html'>
 								<div style="border-radius: 100%; text-align: center">
 									<img src="./images/comlog/unhrc.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
 									<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
-										href='unhrc.html'>UNHRC</h1>
+										href='unhrc.html'>United Nations Human Rights Council</h1>
 								</div>
 							</a><br>
 							<a href='aippm.html'>
 									<div style="border-radius: 100%; text-align: center">
 										<img src="./images/comlog/aippm.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
 										<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
-											href='aippm.html'>AIPPM</h1>
+											href='aippm.html'>All India Political Meet</h1>
 									</div>
 							</a><br>
 							<a href='fcc.html'>
 								<div style="border-radius: 100%; text-align: center">
 									<img src="./images/comlog/fcc.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
 									<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
-										href='fcc.html'>FCC</h1>
+										href='fcc.html'>Futuristic Crisis Committee</h1>
 								</div>
 							</a><br>
 							<a href='ipc.html'>
 									<div style="border-radius: 100%; text-align: center">
 										<img src="./images/comlog/ipc.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
 										<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
-											href='ipc.html'>IPC</h1>
+											href='ipc.html'>International Press Corps</h1>
 									</div>
 							</a><br>
 						</tr></tbody></table>
