--- a/unhrc.html
+++ b/unhrc.html
@@ -24,8 +24,8 @@
                         <li>
                             <a href="#">Committees</a>
                             <ul>
-								<li><a href="unem.html">United Nations Emergency Meeting </a></li>
-								<li><a href="unhrc.html">United Nations Human Rights Council</a></li>
+								<li><a href="unem.html">unem</a></li>
+								<li><a href="unhrc.html">UNHRC</a></li>
 								<li><a href="aippm.html">All India Political Parties Meet</a></li>
 								<li><a href="fcc.html">Futuristic Crisis Committee</a></li>
 								<li><a href="ipc.html">International Press Corps</a></li>
@@ -60,7 +60,7 @@
 						<!-- Content -->
 							<section id="content">
 								<div style="text-align: center;">
-									<h2>UNHRC</h2>
+									<h2>United Nations Human Rights Council</h2>
 					<p style="font-size: 1.25em">
 						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
 					</p>
