--- a/unem.html
+++ b/unem.html
@@ -60,7 +60,7 @@
 						<!-- Content -->
 							<section id="content">
 								<div style="text-align: center;">
-									<h2>UNEM</h2>
+									<h2>United Nations Emergency Meeting</h2>
 					<p style="font-size: 1.25em">
 						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
 					</p>
